# hegemony-notification-plugins

./: .commitlintrc.yaml  LICENSING.md  README.md  REUSE.toml  Taskfile.yml  pyproject.toml
.github/workflows/: release.yml
plugins/notification_core_transports/: README.md  pyproject.toml
plugins/notification_core_transports/src/hegemony_notification_core_transports/: __init__.py  email.py  outgoing_webhook.py  shoutrrr.py
plugins/notification_shoutrrr_presets/: README.md  pyproject.toml
plugins/notification_shoutrrr_presets/src/hegemony_notification_shoutrrr_presets/: __init__.py  presets.py
plugins/notification_webhook_presets/: README.md  pyproject.toml
plugins/notification_webhook_presets/src/hegemony_notification_webhook_presets/: __init__.py  presets.py
scripts/: package_paths.py  set_version.py  smoke_install_wheels.py  verify_release_version.py
tests/: test_core_transports.py  test_sdk_contract.py  test_shoutrrr_presets.py  test_webhook_presets.py
