# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-notification-plugins-workspace"
version = "0.1.0"
description = "Workspace for Hegemony notification SDK and provider/preset plugin wheels"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.13",
    "ty>=0.0.14",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/notification_sdk",
    "plugins/notification_core_transports",
    "plugins/notification_shoutrrr_presets",
]

[tool.uv.sources]
hegemony-notification-sdk = { workspace = true }
hegemony-notification-core-transports = { workspace = true }
hegemony-notification-shoutrrr-presets = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "hegemony_notification_sdk",
    "hegemony_notification_core_transports",
    "hegemony_notification_shoutrrr_presets",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["packages", "plugins", "tests"]
exclude = ["**/__pycache__", ".venv", "dist", "build"]
