# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-notification-core-transports"
version = "0.2.0"
description = "Core notification transports (email, shoutrrr, outgoing_webhook) for Hegemony"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "hegemony-notification-sdk==0.2.0",
    "aiosmtplib>=3.0.0",
    "httpx>=0.27.0",
]

[project.entry-points."hegemony.notification_providers"]
core_transports = "hegemony_notification_core_transports:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_notification_core_transports"
module-root = "src"
