# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-notification-webhook-presets"
version = "0.1.0"
description = "Webhook-based notification presets (Webex, Microsoft Teams) for Hegemony"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = ["hegemony-notification-sdk>=0.2.0,<0.3.0"]

[project.entry-points."hegemony.notification_providers"]
webhook_presets = "hegemony_notification_webhook_presets:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_notification_webhook_presets"
module-root = "src"
